--- a/src/main/webapp/style/sandbox.scss
+++ b/src/main/webapp/style/sandbox.scss
@@ -1,1 +1,5 @@
 /** @designer: add sass/scss rules here. Upon run-devmode they will be transpiled to css and automatically loaded into the application */
+
+.test-wrapper {
+	color: #ff0000;
+}
